# eventtz

./: README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  .railwayignore  Makefile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py  supabase_client.py
backend/scripts/: generate_architecture_pdf.py  migrate_imports.py  seed_vendor_reviews.py  sync-railway-env.sh
backend/sql/: 001_users_and_vendor_onboarding.sql  002_drop_display_name_from_users.sql  003_rename_vendor_onboarding_to_vendors.sql  004_vendors_approval_status.sql  005_allow_banned_vendor_approval_status.sql  006_admin_vendor_list_view.sql  009_disable_rls_public_users_vendors.sql  010_booking_requests.sql  011_booking_completed_and_notifications.sql  012_booking_notification_cancelled.sql  013_booking_paid_at.sql  014_chat_conversations_messages.sql  015_booking_vendor_adjustments.sql  016_booking_notifications_body_and_pricing_kind.sql  017_booking_reviews.sql  018_admin_console.sql  019_booking_vendor_initiator.sql  020_booking_event_postcode.sql  021_dispute_one_active_per_booking.sql  022_dispute_conversation_id.sql  023_storage_bucket_eventtz_images.sql  024_booking_event_address.sql  025_ensure_booking_event_postcode_address.sql  026_stripe_connect_payments.sql  027_message_quote_metadata.sql  028_contact_sharing_preferences.sql  029_seed_vendor_reviews.sql  030_booking_requests_updated_at_index.sql  031_admin_team.sql  032_vendor_business_name_unique.sql  032_verify_vendor_business_name_unique.sql  039_blog_posts.sql  (+23 more)
(+741 files in other folders)
