[project]
name = "backend"
version = "0.1.0"
description = "Eventtz backend"
authors = [
    {name = "Eventtz Ltd", email = "hello@eventtz.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "openai (>=2.29.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "supabase (>=2.28.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.0,<0.29.0)",
    "stripe (>=15.3.0,<16.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
